@@ -123,3 +123,7 @@ Changelog
 
 2007-09-05 (cvs)
 -- feature: gnuplot pictures of FHT without all data (actuator, desired-temp) are shown with only measured temp
+
+2007-10-13 (0.8.3)
+-- feature: Now it is possible to attach selfmade logfiles from e.g. wired devices. Everthing is explained in config.php.
+It is not necessary to tell fhem that there are other logs.
